if HAVE_COLORLCD800
SUBDIRS = display800
endif

if HAVE_COLORLCD720
SUBDIRS = display720
endif

if HAVE_COLORLCD480
SUBDIRS = display480
endif

if HAVE_COLORLCD400
SUBDIRS = display400
endif

if HAVE_COLORLCD220
SUBDIRS = display220
endif

if HAVE_BWLCD255
SUBDIRS = display255
endif

if HAVE_BWLCD140
SUBDIRS = display140
endif

if HAVE_BWLCD128
SUBDIRS = display128
endif

if HAVE_BWLCD96
SUBDIRS = display96
endif