SUBDIRS = OE-A_LCDSkin_1 OE-A_LCDSkin_2 OE-A_LCDSkin_3 OE-A_LCDSkin_4 OE-A_LCDSkin_5 OE-A_LCDSkin_6 OE-A_LCDSkin_7 OE-A_LCDSkin_8 OE-A_LCDSkin_9 OE-A_LCDSkin_10 OE-A_LCDSkin_11 OE-A_LCDSkin_12 OE-A_LCDSkin_13 OE-A_LCDSkin_14 OE-A_LCDSkin_15 OE-A_LCDSkin_16 OE-A_LCDSkin_17 OE-A_LCDSkin_18 OE-A_LCDSkin_19 OE-A_LCDSkin_20 OE-A_LCDSkin_21